2015-05-12  Ondřej Bílka  <neleai@seznam.cz>

	* sysdeps/x86_64/multiarch/strcspn.S: Remove plt indirection.
	* sysdeps/x86_64/multiarch/strspn.S: Likewise.

2015-05-12  Roland McGrath  <roland@hack.frob.com>

	* posix/uname-values.h: New file.
	* posix/uname.c: Include that instead of <config-name.h>.
	* sysdeps/nacl/uname-values.h: New file.
	* sysdeps/arm/nacl/uname-values.h: New file.

2015-05-12  Joseph Myers  <joseph@codesourcery.com>

	* conform/linknamespace.pl (list_syms): Remove \[.*?\] before
	splitting into fields.

2015-05-12  Leonhard Holz <leonhard.holz@web.de>

	* locale/categories.def: Define _NL_COLLATE_ENCODING_TYPE.
	* locale/langinfo.h: Add _NL_COLLATE_ENCODING_TYPE to attribute list.
	* locale/localeinfo.h: Add enum collation_encoding_type.
	* locale/C-collate.c: Set _NL_COLLATE_ENCODING_TYPE to 8bit.
	* programs/ld-collate.c (collate_output): Add encoding type info.
	* string/strcoll_l.c (STRDIFF): New function.
	* (STRCOLL): Use STRDIFF to skip over equal prefix.
	* wcsmbs/wcscoll_l.c: Define STRDIFF.

2015-05-11  Joseph Myers  <joseph@codesourcery.com>

	[BZ #18397]
	* sysdeps/mips/mips32/fpu/fpu_control.c: Move to ....
	* sysdeps/mips/mips32/fpu/fpucw-helpers.c: ... here.  Include
	<fpu_control.h> instead of <math/fpu_control.c>.
	* sysdeps/mips/mips32/fpu/Makefile: New file.

2015-05-11  Andreas Schwab  <schwab@suse.de>

	[BZ #18007]
	* nis/nss_compat/compat-grp.c (internal_endgrent): Don't call
	nss_endgrent.
	(_nss_compat_endgrent): Call nss_endgrent.
	* nis/nss_compat/compat-pwd.c (internal_endpwent): Don't call
	nss_endpwent.
	(_nss_compat_endpwent): Call nss_endpwent.
	* nis/nss_compat/compat-spwd.c (internal_setspent): Add parameter
	needent, call nss_setspent only if non-zero.
	(_nss_compat_setspent, _nss_compat_getspent_r): Pass non-zero.
	(internal_endspent): Don't call nss_endspent.
	(_nss_compat_endspent): Call nss_endspent.
	* nss/nss_files/files-XXX.c (position, last_use, keep_stream):
	Remove.  All uses removed.