@@ -1,0 +1,2 @@
+#define D(x) x##64
+#include "tst-scandir.c"
