@@ -1,3 +1,9 @@
+2015-05-12  Roland McGrath  <roland@hack.frob.com>
+
+	* dirent/tst-scandir.c: New file.
+	* dirent/tst-scandir64.c: New file.
+	* dirent/Makefile (tests): Add them.
+
 2015-05-12  Ondřej Bílka  <neleai@seznam.cz>
 
 	* sysdeps/x86_64/multiarch/strcspn.S: Remove plt indirection.
